--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/TMC2130Stepper"]
 	path = lib/TMC2130Stepper
 	url = https://github.com/teemuatlut/TMC2130Stepper.git
+[submodule "lib/AccelStepper"]
+	path = lib/AccelStepper
+	url = https://github.com/AssociationRobotTelecomStrasbourg/AccelStepper
