--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/TeensyStep"]
 	path = lib/TeensyStep
 	url = https://github.com/AssociationRobotTelecomStrasbourg/TeensyStep.git
+[submodule "lib/vl53l0x"]
+	path = lib/vl53l0x
+	url = https://github.com/AssociationRobotTelecomStrasbourg/vl53l0x-arduino.git
